<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AddCollectionActivity">

<EditText
    android:id="@+id/edit_collection_name"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:inputType="text"
    android:hint="@string/edit_collection_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/edit_description"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:inputType="text"
    android:hint="@string/edit_collection_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/edit_collection_name" />

<Button
    android:id="@+id/save_collection_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/save_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_description" />

<Button
    android:id="@+id/cancel_collection_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:text="@string/cancel_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/save_collection_button" />


</androidx.constraintlayout.widget.ConstraintLayout>