<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".DisplayCollectionActivity">

<LinearLayout
    android:id="@+id/display_collection_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/display_collection_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/collection_name"
        android:textSize="30sp" />

    <Button
        android:id="@+id/delete_collection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toRightOf="@+id/display_collection_name" />
</LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recipe_in_collection_recyclerview"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="32dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/display_collection_header" >

</androidx.recyclerview.widget.RecyclerView>

<Button
    android:id="@+id/display_collection_return_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/return_button"
    android:layout_marginBottom="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>