<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeInformationActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/no_image_found"
                tools:srcCompat="@drawable/no_image_found" />

            <TextView
                android:id="@+id/textView_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/textView_likes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_cost" />

            <TextView
                android:id="@+id/textView_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/textView_readyTime"
                app:layout_constraintStart_toEndOf="@+id/textView_cost"
                app:layout_constraintTop_toBottomOf="@+id/image_likes" />

            <TextView
                android:id="@+id/textView_readyTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_likes"
                app:layout_constraintTop_toBottomOf="@+id/image_readyTime" />

            <ImageView
                android:id="@+id/image_cost"
                android:layout_width="48dp"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@+id/image_likes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_image"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/image_likes"
                android:layout_width="48dp"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@+id/image_readyTime"
                app:layout_constraintStart_toEndOf="@+id/image_cost"
                app:layout_constraintTop_toBottomOf="@+id/detail_image"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/image_readyTime"
                android:layout_width="48dp"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_likes"
                app:layout_constraintTop_toBottomOf="@+id/detail_image"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/instruction_title"
                android:layout_width="119dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="276dp"
                android:layout_marginRight="276dp"
                android:text="@string/Instruction"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_cost" />

            <TextView
                android:id="@+id/ingredient_title"
                android:layout_width="119dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="276dp"
                android:layout_marginRight="276dp"
                android:text="@string/Ingredients"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction_text" />

            <EditText
                android:id="@+id/instruction_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredient_recyclerview"
                android:layout_width="409dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_title">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/similar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_recyclerview"
                android:text="@string/SimilarRecipe" />

            <TextView
                android:id="@+id/textView_similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/similar_title"
                android:text="@string/SimilarRecipe" />

            <LinearLayout
                android:id="@+id/recipe_notes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_similar"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/recipe_note" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recipe_images_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/note_title"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/recipe_user_image"
                        android:layout_width="0dp"
                        android:layout_height="128dp"
                        app:layout_constraintEnd_toStartOf="@+id/recipe_add_image_button"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/no_image_found" />

                    <ImageButton
                        android:id="@+id/recipe_add_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/recipe_user_image"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/camera" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recipe_operation_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_notes_layout">

                <Button
                    android:id="@+id/add_to_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:text="@string/AddToCollection" />

                <Button
                    android:id="@+id/add_to_mealplan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:text="@string/AddToMealplan" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>